# p2p_app

./: .gitignore  Cargo.toml  Cross.toml  cookies.json  device.token  idex_history.json
src/: device_token.rs  device_token_dialog.rs  idex.rs  main.rs  telegram.rs
